<resources>
    <string name="app_name">Projet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_reservation">Reservation</string>
    <string name="action_settings">Settings</string>

    <string name="res_nav_title">Mes Reservations</string>
    <string name="home_nav_title">Accueil</string>
    <string name="list_users_nav_title">Liste Utilisateurs</string>

    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="login">Login</string>
    <string name="login_login">LOGIN</string>
    <string name="login_register">REGISTER</string>
    <string name="login_pseudo">Pseudo</string>
    <string name="login_password">Password</string>
    <string name="login_nav_title">Login</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_no_successful">Invalid username or password</string>
    <string name="login_empty">Username or password empty</string>
    <string name="login_to_short">Username or password to short</string>
    <string name="login_no_in_format">Username not good format</string>
    <string name="register_username_already_exists">This username already exists</string>

    <string name="text_button_7h_00">07:00</string>
    <string name="text_button_8h_00">08:00</string>
    <string name="text_button_9h_00">09:00</string>
    <string name="text_button_10h_00">10:00</string>
    <string name="text_button_11h_00">11:00</string>
    <string name="text_button_12h_00">12:00</string>
    <string name="text_button_13h_00">13:00</string>
    <string name="text_button_14h_00">14:00</string>
    <string name="text_button_15h_00">15:00</string>
    <string name="text_button_16h_00">16:00</string>
    <string name="text_button_17h_00">17:00</string>
    <string name="text_button_18h_00">18:00</string>
    <string name="text_button_19h_00">19:00</string>
    <string name="text_button_20h_00">20:00</string>
    <string name="text_button_21h_00">21:00</string>
    <string name="text_button_booking">Réserver</string>

    <string name="application_name">Tennis Booking</string>
    <string name="application_description">Tennis Booking est un application de réservations de terrain de Tennis.\n\nAttention, 2 heures maximum par jour et par membre.</string>

</resources>