<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_nav_title" />

        <item
            android:id="@+id/nav_reservation"
            android:title="@string/res_nav_title" />

        <item
            android:id="@+id/nav_list_users"
            android:title="@string/list_users_nav_title" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/login_nav_title" />

        <item
            android:id="@+id/nav_reserver"
            android:title="Reserver" />

        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />
    </group>
</menu>