<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <!--app:startDestination="@+id/nav_reservation"-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projet.Home.HomeFragment"
        android:label="@string/home_nav_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.example.projet.reservation.ReservationFragment"
        android:label="@string/res_nav_title"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/nav_list_users"
        android:name="com.example.projet.userlist.UserListFragment"
        android:label="@string/list_users_nav_title"
        tools:layout="@layout/fragment_user_list" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.projet.login.LoginFragment"
        android:label="@string/login_nav_title"
        tools:layout="@layout/fragment_login" />

</navigation>